Fixed horizontal scrollbar issue by changing app.css file and changed start now button position to sticky

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+html {
+  /* this makes sure the padding and the border is included in the box sizing */
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+html body {
+  padding: 0;
+  margin: 0;
+}
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  max-width: 900px;
+  padding: 1rem;
 }
 
 .App-logo {
